# bswitcher

./: BUILD.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: release.yml
cmd/: Cargo.toml
cmd/src/: main.rs
lib/: Cargo.toml
lib/src/: api.rs  key  lib.rs  protocol.rs
lib/src/bks/: errors.rs  keystore.rs
python/: Cargo.toml  pyproject.toml  read_bks.py
python/src/: lib.rs
src/: api.rs  lib.rs  main.rs
src/api/: api.rs  keygen.rs  mod.rs  protocol.rs
