[package]
name = "bswitch-control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-net = "0.1"
async-stream = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
reqwest = {version = "0.11.9", features = ["rustls-tls"]}
clap = {version = "3.0", features = ["derive"]}

[dependencies.async-std]
version = "1.10"
features = ["attributes", "unstable", "tokio1"]
