[package]
name = "cmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0", features = ["derive"]}
base64 = "0.13"
zip = "0.5"
openssl = "0.10"
bswitch = { path = "../lib" }

[dependencies.async-std]
version = "1.10"
features = ["attributes", "unstable", "tokio1"]
