[package]
name = "bswitch"
version = "0.1.0"
edition = "2021"

[lib]
name = "bswitch"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-net = "0.1"
async-stream = "0.3"
async-native-tls = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
reqwest = {version = "0.11.9", features = ["native-tls"]}
openssl = "0.10"

[dependencies.async-std]
version = "1.10"
features = ["attributes", "unstable", "tokio1"]
