[tool.poetry]
name = "bswitch_control"
version = "0.1.0"
description = ""
authors = ["Bar Perach <barp12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
maturin = "^0.12.6"

[build-system]
requires = ["poetry-core>=1.0.0", "maturin>=0.12,<0.13"]
build-backend = "maturin"
